bdr.BDR.scala.error
Erreur de compilation :
BDR:29: error: illegal start of simple expression
  } esle if (x="Z"){
         ^